--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ MarkupSafe==2.1.5
 numpy==1.26.4
 opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
+pillow==10.3.0
 python-engineio==4.9.0
 python-socketio==5.11.2
 simple-websocket==1.0.0
