--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
 h11==0.14.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
@@ -14,5 +16,7 @@ pillow==10.3.0
 python-engineio==4.9.0
 python-socketio==5.11.2
 simple-websocket==1.0.0
+SQLAlchemy==2.0.29
+typing_extensions==4.11.0
 Werkzeug==3.0.2
 wsproto==1.2.0
