--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ numpy==1.26.4
 opencv-contrib-python==4.9.0.80
 opencv-python==4.9.0.80
 pillow==10.3.0
+pypng==0.20220715.0
 python-engineio==4.9.0
 python-socketio==5.11.2
+qrcode==7.4.2
 simple-websocket==1.0.0
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
